# daavfx_launcher

./: .gitignore  index.html  launcher_dev.bat  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: download_model.ps1
src-tauri/src/: ai.rs  commands.rs  main.rs  monte_carlo.rs
src/components/: launcher.tsx  titlebar.tsx
src/components/launcher/: ai-widget.tsx  app-grid.tsx  bottom-nav.tsx  cli-widget.tsx  clock-widget.tsx  gpu-widget.tsx  markets-widget.tsx  quote-widget.tsx  status-bar.tsx  system-metrics.tsx  weather-widget.tsx
src/components/launcher/tabs/: apps-tab.tsx  home-tab.tsx  logs-tab.tsx  search-tab.tsx  settings-tab.tsx
